# systemrdl-spinal

./: .gitignore  README.md  build.mill  flake.nix  pyproject.toml
.github/workflows/: publish.yml
src/systemrdl_spinal/: gen_scala_wrapper.py  gen_sv_wrapper.py  hwif_report_parser.py  utils.py
src/systemrdl_spinal/grammars/: hwif_report.lark
systemrdl_spinal/src/main/: PeakrdlRegblockShim.scala
systemrdl_spinal/src/main/test_module/: InterruptController.scala
